--- a/ParkyWeb/Views/NationalParks/Index.cshtml
+++ b/ParkyWeb/Views/NationalParks/Index.cshtml
@@ -1,7 +1,27 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
-}
+﻿<br />
+<div class="border backgroundWhite">
+	<div class="row">
+		<div class="col-6">
+			<h2 class="text-primary">National Park List</h2>
+		</div>
+		<div class="col-6 text-right">
+			<a class="brn btn-primary"><i class="fas fa-plus"></i>&nbsp; Create New National Park</a>
+		</div>
+	</div>
+	<br />
+	<br />
+	<table id="tblData" class="table table-striped table-bordered" style="width:100%">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>State</th>
+				<th></th>
+			</tr>
+		</thead>
+	</table>
+</div>
 
-<h1>Index</h1>
+@section Scripts{ 
+<script src="~/js/nationalPark.js"></script>
+}
 
