--- a/ParkyWeb/Views/NationalParks/Index.cshtml
+++ b/ParkyWeb/Views/NationalParks/Index.cshtml
@@ -5,7 +5,7 @@
 			<h2 class="text-info">National Park List</h2>
 		</div>
 		<div class="col-6 text-right">
-			<a class="brn btn-info text-white"><i class="fas fa-plus"></i>&nbsp; Create New National Park</a>
+			<a class="btn btn-info text-white"><i class="fas fa-plus"></i>&nbsp; Create New National Park</a>
 		</div>
 	</div>
 	<br />
