--- a/ParkyWeb/Views/NationalParks/Upsert.cshtml
+++ b/ParkyWeb/Views/NationalParks/Upsert.cshtml
@@ -1,26 +1,102 @@
-﻿<form method="post">
-    <div class="row px-2 mx-2 backgroundWhite border">
-        <div class="col-12 p-3">
-            <h2 class="text-primary">___-TITLE-___</h2>
-        </div>
-        <div class="col-8">
+﻿@model ParkyWeb.Models.NationalPark
+@{ 
+	string title = "Create National Park";
+}
+
+<form method="post" asp-action="Upsert" enctype="multipart/form-data">
+	<div class="row px-2 mx-2 backgroundWhite border">
+		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+		@{
+			bool isUpdating = Model?.Id != 0;
+		} 
+
+		@if (isUpdating)
+		{
+			<input type="hidden" asp-for="Id"/>
+			title = "Edit National Park";
+		}
+
+		<div class="col-12 p-3">
+			<h2 class="text-primary">@title</h2>
+		</div>
+		<div class="col-8">
 			<div class="form-group row">
 				<div class="col-4">
+					<label asp-for="Name"></label>
 				</div>
 				<div class="col-8">
+					<input asp-for="Name" class="form-control"/>
+					<span asp-validation-for="Name" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="form-group row">
-				<div class="col-4 offset-4">
-				</div>
 				<div class="col-4">
-					<a class="btn btn-success form-control">Back To List</a>
+					<label asp-for="State"></label>
+				</div>
+				<div class="col-8">
+					<input asp-for="State" class="form-control" />
+					<span asp-validation-for="State" class="text-danger"></span>
 				</div>
 			</div>
-        </div>
-		<div class="col-4 text-right" style="width:250px">
-			<img src="https://via.placeholder.com/150" width="100%"/>
+			<div class="form-group row">
+				<div class="col-4">
+					<label asp-for="Picture"></label>
+				</div>
+				<div class="col-8">
+					<input type="file" asp-for="Picture" id="parkImage" name="files" multiple class="form-control"/>
+				</div>
+			</div>
+			<div class="form-group row">
+				<div class="col-4">
+					<label asp-for="Established"></label>
+				</div>
+				<div class="col-8">
+					@{ 
+						string dateEstablished = "";
+
+						if (isUpdating)
+							dateEstablished = Model.Established.ToShortDateString();
+					}
+					<input id="datePicker" value="@dateEstablished" type="text" asp-for="Established" class="form-control" />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<div class="col-4 offset-4">
+					<button>
+						@(isUpdating ? "Update" : "Create")
+					</button>
+				</div>
+				<div class="col-4">
+					<a asp-action="Index" class="btn btn-success form-control text-white">Back To List</a>
+				</div>
+			</div>
 		</div>
-    </div>
+		<div class="col-4 text-right" style="width:250px">
+			@if (Model.Picture != null)
+			{
+				string base64 = Convert.ToBase64String(Model.Picture);
+				string imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
+
+				<img src="@imgSrc" width="100%" />
+				
+				//<img src="https://via.placeholder.com/150" width="100%" />
+			}
+		</div>
+	</div>
 </form>
 
+@section Scripts{
+
+	<script>
+		$(function () {
+			$("#datePicker").datepicker({
+				changeMonth: true,
+				changeYear: true,
+				minYear: "1"
+			});
+		})
+	</script>
+ }
+
+@{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
