Added Trails controller and cleaned up formatting

--- a/ParkyWeb/Views/NationalParks/Upsert.cshtml
+++ b/ParkyWeb/Views/NationalParks/Upsert.cshtml
@@ -63,12 +63,12 @@
 
 			<div class="form-group row">
 				<div class="col-4 offset-4">
-					<button>
+					<button class="btn btn-success form-control text-white">
 						@(isUpdating ? "Update" : "Create")
 					</button>
 				</div>
 				<div class="col-4">
-					<a asp-action="Index" class="btn btn-success form-control text-white">Back To List</a>
+					<a asp-action="Index" class="btn btn-info form-control text-white">Back To List</a>
 				</div>
 			</div>
 		</div>
