--- a/ParkyWeb/Views/Shared/_Layout.cshtml
+++ b/ParkyWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Http
+@using ParkyWeb.Utilities
 @inject IHttpContextAccessor httpAccessor
 
 <!DOCTYPE html>
@@ -56,6 +57,15 @@
 	</header>
 	<div class="container back">
 		<main role="main" class="pb-3">
+			@if (TempData[StaticDetails.Alert] != null)
+			{
+				<div class="alert alert-danger alert-dismissible fade show" role="alert">
+					@TempData[StaticDetails.Alert]
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times</span>
+					</button>
+				</div>
+			}
 			@RenderBody()
 		</main>
 	</div>
